--- a/Proposal/ProjectProposal.tex
+++ b/Proposal/ProjectProposal.tex
@@ -346,7 +346,7 @@ The AGC must be compatible and function with a STM32 embedded test system. The p
 
 \section{Conclusion}
 
-Through this project’s successful completion, we hope to expand the field of asynchronous graphing compilers by giving researchers a useful tool that can save time, increase efficiency, and allow for more branches of research. We deem this project a complete success when it can compile and execute any AGP code that we give it. We deem this project a partial success if the system can run moderately complex code, such as a program with several variable assignments, variable accesses, and recursive functions. 
+Through this project’s successful completion, we hope to expand the field of asynchronous graph programming by giving researchers a useful tool that can save time, increase efficiency, and allow for more branches of research. We deem this project a complete success when it can compile and execute any AGP code that we give it. We deem this project a partial success if the system can run moderately complex code, such as a program with several variable assignments, variable accesses, and recursive functions. 
 
 \pagebreak
 
