--- a/Proposal/ProjectProposal.tex
+++ b/Proposal/ProjectProposal.tex
@@ -230,7 +230,7 @@ One of the tools required for implementing the compiler is a lexer / scanner tha
  	  &
  and deficiencies." [10] \\ 
  \hline 
- Lex & predecessor to Flex, also LALR. \\
+ Lex & Predecessor to Flex, also LALR. \\
  \hline
 \end{tabular}
 \end{center}
@@ -342,7 +342,7 @@ The AGC must be compatible and function with a STM32 embedded test system, as sp
 
 \section{Conclusion}
 
-Through this project’s successful completion, we hope to expand the field of asynchronous graph programming by giving researchers a useful tool that can save time, increase efficiency, and allow for more branches of research. We deem this project a complete success when it can compile and execute any AGP code that we give it. We deem this project a partial success if the system can run moderately complex code, such as a program with several variable assignments, variable accesses, and recursive functions. 
+Through this project’s successful completion, we hope to expand the field of asynchronous graph programming by giving researchers a useful compiler that can save time, increase efficiency, and allow for more branches of research. We deem this project a complete success when it can compile and execute any AGP code that we give it. We deem this project a partial success if the system can run moderately complex code, such as a program with several variable assignments, variable accesses, and recursive functions. 
 
 \pagebreak
 
