--- a/Proposal/ProjectProposal.tex
+++ b/Proposal/ProjectProposal.tex
@@ -361,7 +361,7 @@ B. Donyanavard, T. Muck, S. Sarma, and N. Dutt, “Sparta: Runtimetask allocatio
 M. A. Aguilar, R. Leupers, G. Ascheid, and L. G. Murillo, “Automaticparallelization and accelerator offloading for embedded applications on heterogeneous mpsocs,” in Proceedings of the 53rd Annual DesignAutomation Conference. ACM, 2016, p. 49
 
 \bibitem{} 
-S. Marlow, "Fighting spam with Haskell - Facebook Engineering", Facebook Engineering, 2020. [Online]. Available: \url{https://engineering.fb.com/2015/06/26/security/fighting-spam-with-haskell/} 
+S. Marlow, "Fighting spam with Haskell - Facebook Engineering", Facebook Engineering, 2020. [Online]. Available: https://engineering.fb.com/2015/06/26/security/fighting-spam-with-haskell/ 
 [Accessed: 26- Oct- 2020]
 
 \bibitem{}
